--- a/navber/menu.css
+++ b/navber/menu.css
@@ -120,3 +120,83 @@ div #sharkar:hover{
     border-right: 30px solid red;
 
 }
+section{
+    margin: 50px;
+    margin-top: 80px;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align:center;
+    position:relative;
+}
+h2{
+    border: 1px solid red;
+    display: inline-block;
+    width: min-content;
+    margin: 0 auto;
+    padding: 10px;
+    background-color: aquamarine;
+    color:blueviolet;
+    border-radius: 10px;
+}
+/* p{
+    background-color: bisque;
+    position: absolute;
+    top: 45px;
+    left: 40%;
+    right: 40%;
+
+}
+p:hover{
+    display:inline;
+    color:red;
+} */
+main div{
+    background-color: aquamarine;
+    position: relative;
+}
+main div p{
+    width: 20px;
+    height: 50px;
+    background-color: rgba(0, 247, 255, 0.299);
+    border-radius: 30px 0 0 30px;
+    border: 0;
+    position: fixed;
+    top:50%;
+    right:0;
+}
+main div p:hover{
+    border-radius: 30px 0 0 30px;
+    transition: 1s;
+    padding-right: 60px;
+    border: 1px solid rgb(15, 182, 254);
+    background-color: rgb(0, 247, 255);
+}
+main a{
+    background-color: rgba(255, 0, 0, 0.395);
+    width: min-content;
+    padding: 20px;
+    border-radius: 50%;
+    text-decoration: none;
+    color: #fff;
+    font-weight: 800;
+    font-size: 10px;
+}
+main a:hover{
+    background-color: red;
+    transition: 0.5s;
+    border: 1px solid black;
+    font-size: 16px;
+}
+main{
+    position: relative;
+}
+main a{
+    position: sticky;
+    bottom:50px;
+left: 94%;
+}
+body section p{
+    margin: 30px 0;
+    padding: 0px 20px;
+}
